[package]
name = "skyangle"
version = "0.2.1"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Astronomical angles manipulations"
repository = "https://github.com/rconan/skyangle"
documentation = "https://docs.rs/skyangle"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]
