[package]
name = "skyangle"
version = "0.3.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Astronomical angles manipulations"
repository = "https://github.com/rconan/skyangle"
documentation = "https://docs.rs/skyangle"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[dev-dependencies]
serde_json = "1.0.91"

[dependencies]
serde = { version = "1.0.217", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[package.metadata.docs.rs]
features = ["serde"]
